[gd_scene load_steps=9 format=3 uid="uid://d2uj58m770r6r"]

[ext_resource type="Texture2D" uid="uid://bj5od88cb781e" path="res://art/bg/bathroom.png" id="1_6sne7"]
[ext_resource type="Script" path="res://script/chapter_1/day1/chapter_1_day_1_bathroom.gd" id="1_723nc"]
[ext_resource type="PackedScene" uid="uid://u2e6yaiphjic" path="res://scenes/irla_player.tscn" id="2_3wfmj"]
[ext_resource type="PackedScene" uid="uid://bpcs5g3fijv0l" path="res://scenes/player.tscn" id="3_sl3ac"]
[ext_resource type="PackedScene" uid="uid://dpl6yr04nxcg8" path="res://scenes/HUD/hud.tscn" id="4_kacmj"]
[ext_resource type="FontFile" uid="uid://btpd2d0e87gb1" path="res://art/fonts/m6x11.ttf" id="5_bsl62"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akjjx"]
size = Vector2(20, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7iik"]
size = Vector2(31, 218)

[node name="chapter1Day1Bathroom" type="Node2D"]
script = ExtResource("1_723nc")

[node name="Bathroom" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(300, 91)
texture = ExtResource("1_6sne7")

[node name="irla_player" parent="." instance=ExtResource("2_3wfmj")]
visible = false
position = Vector2(136, 120)

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="player" parent="." instance=ExtResource("3_sl3ac")]
position = Vector2(131, 127)

[node name="HUD" parent="." instance=ExtResource("4_kacmj")]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(336, 104)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(40, 8)
shape = SubResource("RectangleShape2D_akjjx")

[node name="ButtonEspiar" type="Button" parent="Area2D"]
visible = false
offset_left = 24.0
offset_top = -40.0
offset_right = 56.0
offset_bottom = -24.0
theme_override_fonts/font = ExtResource("5_bsl62")
theme_override_font_sizes/font_size = 8
text = "Espiar"

[node name="ButtonEntrar" type="Button" parent="Area2D"]
visible = false
offset_left = 26.0
offset_top = -8.0
offset_right = 55.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("5_bsl62")
theme_override_font_sizes/font_size = 8
text = "Entrar"

[node name="Outside" type="Area2D" parent="."]
position = Vector2(-24, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Outside"]
position = Vector2(0, 99)
shape = SubResource("RectangleShape2D_i7iik")

[node name="Button" type="Button" parent="Outside"]
visible = false
offset_top = 32.0
offset_right = 22.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("5_bsl62")
theme_override_font_sizes/font_size = 8
text = "Salir"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="Area2D/ButtonEntrar" to="." method="_on_button_entrar_pressed"]
[connection signal="body_entered" from="Outside" to="." method="_on_outside_body_entered"]
[connection signal="body_exited" from="Outside" to="." method="_on_outside_body_exited"]
[connection signal="pressed" from="Outside/Button" to="." method="_on_button_pressed"]
